Change Log
----------

  V1.1
  
  - Fixes:
    - Slider arrow buttons work correctly.
    - WoopsiString::compareTo() returns s8 instead of s32.
    - WoopsiString::compareTo() sorts Chinese text correctly (carpfish).
    - ProgressBar at 100% completion no longer overflows the printout char
      array (carpfish).
    - FileListBox handles paths with unicode names correctly (carpfish).

  - New Features:
    - Added StringIterator::getInteger() (carpfish).
    - WoopsiString::compareTo() implements a simplistic natural sort (carpfish).
    - Added WoopsiString::indexOf(const char* text) (carpfish).
    - Added WoopsiString::indexOf(const char* text, s32 startIndex) (carpfish).
    - Added WoopsiString::indexOf(const WoopsiString& string, s32 startIndex,
      s32 count) (carpfish).
    - Added WoopsiString::lastIndexOf(const char* text) (carpfish).
    - Added WoopsiString::lastIndexOf(const char* text, s32 startIndex)
      (carpfish).
    - Added WoopsiString::lastIndexOf(const WoopsiString& string, s32
      startIndex, s32 count) (carpfish).
    - Added WoopsiString + operator overload (carpfish).
    - Added WoopsiString += operator overload (carpfish).
    - Added WoopsiString == operator overload (carpfish).
    - Added WoopsiString != operator overload (carpfish).
    - Added WoopsiString::format() (carpfish).
    - Added WoopsiString::init() and moved repeated code out of constructors.
    - Added case sensitive switch to WoopsiString::compareTo() (carpfish).
    - Added WoopsiString::replace() (carpfish).

  V1.0 (20110201)
  
  - Fixes:
    - Rect::getAddition() returns the correct rectangle.
    - All .NET tools work correctly.

  V0.99.6 (20101101)
  
  - Fixes:
    - Fixed scrolling problem in top screen.
    - Gadget::changeDimensions() no longer leaves gadgets accidentally hidden.
    - Division by 0 fixed in Range class when max value == min value.
    - Document::stripTopLines() no longer wraps text twice.