@@ -1,6 +1,7 @@
 #ifndef _WOOPSI_STRING_H_
 #define _WOOPSI_STRING_H_
 
+#include <stdarg.h>
 #include <nds.h>
 
 namespace WoopsiUI {
@@ -367,10 +368,27 @@ namespace WoopsiUI {
 		/**
 		 * Formats the supplied char array using standard printf() syntax.  The
 		 * formatted text replaces the contents of the current string object.
+		 *
+		 * Note that the compiler message regarding va_list mangling changes
+		 * in GCC 4.4 are not problems with Woopsi's code.  They are the result
+		 * of the GCC team bizarrely deciding to include news items in compiler
+		 * messages:
+		 * http://gcc.gnu.org/bugzilla/show_bug.cgi?id=42748
+		 *
 		 * @param format The format to use.
 		 * @param ... The formatting arguments.
 		 */
 		void format(const char *format, ...);
+
+		/**
+		 * Formats the supplied char array using standard printf() syntax.  The
+		 * formatted text replaces the contents of the current string object.
+		 * Note that va_start() must be called before this method is used, and
+		 * va_end() must be called when it finishes.
+		 * @param format The format to use.
+		 * @param args The formatting arguments.
+		 */
+		void format(const char *format, va_list args);
 
 		/**
 		 * Replace all instances of oldText within the current string with
